--- a/public/admin/all-bookings/all-bookings-page.css
+++ b/public/admin/all-bookings/all-bookings-page.css
@@ -512,6 +512,67 @@ footer p {
   cursor: pointer;
 }
 
+#arrived-cus-modal .modal-body .booking-details-title {
+  font-size: 1.2rem;
+  font-weight: bold;
+  border-bottom: 1px #1f2937 solid;
+  padding-bottom: 3px;
+  margin: 0;
+}
+#arrived-cus-modal .modal-body .form-groups {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  border-radius: 8px;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+#arrived-cus-modal .modal-body .form-groups .form-group {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+#arrived-cus-modal .modal-body .form-groups .form-group label {
+  font-weight: bold;
+  color: #4b5563;
+  margin-bottom: 4px;
+  padding-left: 5px;
+}
+#arrived-cus-modal .modal-body .form-groups .form-group input,
+#arrived-cus-modal .modal-body .form-groups .form-group p,
+#arrived-cus-modal .modal-body .form-groups .form-group textarea,
+#arrived-cus-modal .modal-body .form-groups .form-group .dropdown-toggle {
+  background-color: white;
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: 0 0 1px gray;
+  margin: 0;
+  outline: none;
+  border: none;
+  flex-grow: 1;
+}
+#arrived-cus-modal .modal-body .form-groups .form-group .dropdown {
+  flex-grow: 1;
+}
+#arrived-cus-modal .modal-body .form-groups .form-group .dropdown .dropdown-toggle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  color: black;
+  width: 100%;
+  height: 100%;
+}
+#arrived-cus-modal .modal-body .form-groups .form-group .dropdown .dropdown-toggle::after {
+  color: gray;
+}
+#arrived-cus-modal .modal-body .form-groups .form-group .dropdown .dropdown-menu .dropdown-item {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  cursor: pointer;
+}
+
 #confirm-cancel-form .notice {
   font-size: 1.1rem;
   margin: 0;
